Added some style and ts code

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <script src="./dist/app.js"></script>
     <form class="container" autocomplete="off">
         <label for="name">Task:</label>
         <input type="text" id="name">
@@ -17,9 +16,11 @@
         <ul class="tasks">
             <li>
                 <label for="task-1">Go to the gym</label>
-                <input type="checkbox" name="Go to the gym" id="task-1">
+                <input type="checkbox" name="Go to the gym" class="checkbox-1" id="task-1">
             </li>
         </ul>
     </form>
+    <script src="./dist/app.js"></script>
+
 </body>
 </html>
