--- a/index.html
+++ b/index.html
@@ -11,6 +11,20 @@
     <form class="container" autocomplete="off">
         <label for="name">Task:</label>
         <input type="text" id="name">
+        <ul class="categories">
+            <li>
+                <input type="radio" name="category" value="general" id="category-general"/>
+                <label for="category-general">general</label>
+            </li>
+            <li>
+                <input type="radio" name="category" value="work" id="category-work"/>
+                <label for="category-work">work</label>
+            </li>
+            <li>
+                <input type="radio" name="category" value="hobby" id="category-hobby"/>
+                <label for="category-hobby">hobby</label>
+            </li>
+        </ul>
         <button>Add</button>
         <p>ToDo:</p>
         <ul class="tasks">
